# mpesa-python

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
mpesa/: __init__.py  auth.py  client.py  exceptions.py  validators.py
tests/: test_mpesa.py
